--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -30,21 +30,31 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo', 'sprintf'])
 			inletPressure : new units.Quantity('Pressure', 1, 'bar'),
 			inletTemperature : new units.Quantity('Temperature', 15, 'degC'),
 			massFlowRate : new units.Quantity('MassFlowRate', 10, 'kg/h'),
-			pipeMaterial : $scope.materials.solids['StainlessSteel304'],
+			pipeMaterial : 'StainlessSteel304',
 			fluid : 'ParaHydrogen'
 		};
-		$scope.inputs = {
-			name : 'Inputs',
-			fields : [
-				{title:'pipe length', quantity:$scope.inputVariables.pipeLength},
-				{title:'internal diameter', quantity:$scope.inputVariables.internalDiameter},
-          	]
-		};
+		$scope.inputs = [
+			{type : 'group', name: 'Geometry', fields: [
+				{name: 'pipeLength', quantity: 'Length', value: 1, unit: 'm', title: 'pipe length (L)'},
+				{name: 'internalDiameter', quantity: 'Length', value: 5, unit: 'mm', title: 'internal diameter (d_in)'},
+				{name: 'externalDiameter', quantity : 'Length', value: 6, unit: 'mm', title: 'external diameter (d_out)'},
+				{name: 'pipeMaterial', type : 'choice', value: 'StainlessSteel304', options: materials.solids, title: 'pipe material'},
+				{name: 'surfaceRoughness', quantity : 'Length', value: 25, unit: 'um', title: 'abs. surface roughness'},
+			]},
+			{type: 'group', name: 'Flow', fields: [
+				{name: 'fluid', type : 'choice', value: 'ParaHydrogen', options : materials.fluids, title : 'fluid'},
+				{name: 'inletPressure', quantity : 'Pressure', value : 2, unit: 'bar', title : 'inlet pressure'},
+				{name: 'inletTemperature', quantity : 'Temperature', value : 15, unit: 'degC', title : 'inlet temperature'},
+				{name: 'massFlowRate', quantity : 'MassFlowRate', value : 10, unit: 'kg/h', title : 'mass flow rate'}
+
+			]}
+		];
 		
 		$scope.dumpObj = function(obj) {
 			return angular.toJson(obj, true);
 		}
 		$scope.compute = function() {
+            $scope.resultComputed = false;
 			$http({
 		        method  : 'POST',
 		        url     : '/ThermoFluids/FlowResistance/',
@@ -90,23 +100,27 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo', 'sprintf'])
 	<div style="position:relative; width:250mm;height:50mm">
 		<object data="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object>
 	    <div style="position:absolute;left:35mm;top:29mm;">
-			<smo-input-quantity smo-quantity-var="inputVariables.pipeLength" smo-title="pipe length"></smo-input-quantity>
+			<div smo-input-quantity smo-quantity-var="inputVariables.pipeLength" smo-title="pipe length"></div>
 		</div>
 	    <div style="position:absolute;left:150mm;top:2mm;">
-			<smo-input-quantity smo-quantity-var="inputVariables.internalDiameter" smo-title="internal diameter"></smo-input-quantity>				
-			<smo-input-quantity smo-quantity-var="inputVariables.externalDiameter" smo-title="external diameter"></smo-input-quantity>	
-				<div style="display: inline-block;text-align: left;width: 150px;">pipe material</div>
-				<div style="display: inline-block;"><select style="width: 120px;" ng-model="inputVariables.pipeMaterial" ng-options="material as material.title for (name, material) in materials.solids"></select></div>	
-			<smo-input-quantity smo-quantity-var="inputVariables.surfaceRoughness" smo-title="surface roughness"></smo-input-quantity> 
+			<div smo-input-quantity smo-quantity-var="inputVariables.internalDiameter" smo-title="internal diameter"></div>				
+			<div smo-input-quantity smo-quantity-var="inputVariables.externalDiameter" smo-title="external diameter"></div>
+			<div smo-input-choice smo-choice-var="inputVariables.pipeMaterial" smo-options="materials.solids" smo-title="pipe material"></div>
+			<div ng-bind="inputVariables.pipeMaterial"></div>
+			<div smo-input-quantity smo-quantity-var="inputVariables.surfaceRoughness" smo-title="surface roughness"></div> 
 	    </div>
 	</div>
 	<div>
-		<div style="display: inline-block;text-align: left;width: 150px;">fluid</div>
-		<div style="display: inline-block;"><select style="width: 120px;" ng-model="inputVariables.fluid" ng-options="name as material.title for (name, material) in materials.fluids"></select></div>	
-		<smo-input-quantity smo-quantity-var="inputVariables.inletPressure" smo-title="inlet pressure"></smo-input-quantity>	
-		<smo-input-quantity smo-quantity-var="inputVariables.inletTemperature" smo-title="inlet temperature"></smo-input-quantity>
-		<smo-input-quantity smo-quantity-var="inputVariables.massFlowRate" smo-title="inlet mass flow rate"></smo-input-quantity>
+		<div>
+			<div style="display: inline-block;text-align: left;width: 150px;">fluid</div>
+			<div style="display: inline-block;"><select style="width: 209px; height: 30px; margin-left: 5px;" ng-model="inputVariables.fluid" ng-options="name as material.title for (name, material) in materials.fluids"></select></div>
+		</div>	
+		<div smo-input-quantity smo-quantity-var="inputVariables.inletPressure" smo-title="inlet pressure"></div>	
+		<div smo-input-quantity smo-quantity-var="inputVariables.inletTemperature" smo-title="inlet temperature"></div>
+		<div smo-input-quantity smo-quantity-var="inputVariables.massFlowRate" smo-title="inlet mass flow rate"></div>
 	</div>
+	And now with directive
+	<div smo-input-view smo-data-source="inputs"></div>
 	<button class="btn btn-default" ng-click="compute()">Compute</button>
 	<br><br><br>
 	<div ng-if="resultComputed">
